--- a/Game/Platformer.html
+++ b/Game/Platformer.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html>
-<body>
-    <link rel="css" href="css.css">
-    <canvas id = "canvas"></canvas>
-</body>
+    <head>
+        <link rel="stylesheet" href="css.css" />
+        <h1>Platformer</h1>
+    </head>
+    <body>
+        <canvas class = "gameCanvas" id="canvas" width="1000" height="700" style ="border:10px solid black;">
+            Your browser does not support the HTML5 canvas tag.
+        </canvas>
+        
+    </body>
 </html>
 
 <script>
