--- a/Game/Platformer.html
+++ b/Game/Platformer.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang = "en">
     <head>
+        <meta charset="utf-8">
         <link rel="stylesheet" href="css.css" />
         <h1>Platformer</h1>
     </head>
     <body>
-        <canvas class = "gameCanvas" id="canvas" width="1000" height="700" style ="border:10px solid black;">
-            Your browser does not support the HTML5 canvas tag.
-        </canvas>
+        <div id = "container">
+            <canvas class = "gameCanvas" id="canvas" width="1000" height="700" style ="border:10px solid black;">
+                Your browser does not support the HTML5 canvas tag.
+            </canvas>
+            <button id = "startButton" class = "start">Start</button>
+        </div>
         
     </body>
 </html>
